<resources>
    <string name="app_name">MyRedPackage</string>
    <string name="red_package">红包</string>
    <string name="send_red_package">发红包</string>
    <string name="total_money">总金额</string>
    <string name="red_package_amount">红包个数</string>
    <string name="single_word_chinese_money">元</string>
    <string name="single_word_amount">个</string>
    <string name="default_money">0.00</string>
    <string name="amount_hint">填写个数</string>
    <string name="leave_message">留言</string>
    <string name="default_leave_message_hint">恭喜发财，大吉大利</string>
    <string name="input_red_package">塞进红包</string>
    <string name="chinese_yuan">%1$s元</string>
    <string name="red_package_price_tip">红包金额必须大于0元</string>
    <string name="red_package_number_tip">红包数量必须大于0个</string>
</resources>
