<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f2f3f5"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/red_d85940"
        android:gravity="center"
        android:text="@string/send_red_package"
        android:textColor="@color/yellow_fe2b1"
        android:textSize="@dimen/ts_18" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/bg_5dp_solid_white"
        android:padding="5dp">

        <EditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="25dp"
            android:background="@android:color/transparent"
            android:gravity="end|right"
            android:hint="@string/default_money"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_9e9e9e"
            android:textSize="@dimen/ts_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/total_money"
            android:textColor="@color/black"
            android:textSize="@dimen/ts_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/single_word_chinese_money"
            android:textColor="@color/black"
            android:textSize="@dimen/ts_16" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/bg_5dp_solid_white"
        android:padding="5dp">

        <EditText
            android:id="@+id/et_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_marginRight="25dp"
            android:background="@android:color/transparent"
            android:gravity="end|right"
            android:hint="@string/amount_hint"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_9e9e9e"
            android:textSize="@dimen/ts_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/red_package_amount"
            android:textColor="@color/black"
            android:textSize="@dimen/ts_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/single_word_amount"
            android:textColor="@color/black"
            android:textSize="@dimen/ts_16" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/bg_5dp_solid_white"
        android:padding="5dp">

        <EditText
            android:id="@+id/et_describe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:background="@android:color/transparent"
            android:gravity="end|right"
            android:hint="@string/default_leave_message_hint"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_9e9e9e"
            android:textSize="@dimen/ts_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/leave_message"
            android:textColor="@color/black"
            android:textSize="@dimen/ts_16" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_show_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="¥0.00"
        android:textColor="@color/black"
        android:textSize="@dimen/ts_30"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_input_red_package"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/bg_5dp_solid_red"
        android:text="@string/input_red_package"
        android:textColor="@color/white"
        android:textSize="@dimen/ts_16" />

</LinearLayout>
